--- a/fun-pontoeletronico/fun-pontoeletronico/fun-pontoeletronico.csproj
+++ b/fun-pontoeletronico/fun-pontoeletronico/fun-pontoeletronico.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.10.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="8.0.2" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
