--- a/.github/workflows/main_fun-hkton-fiapi-pontoeletronico.yml
+++ b/.github/workflows/main_fun-hkton-fiapi-pontoeletronico.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: windows-latest
     permissions:
       id-token: write #This is required for requesting the JWT
-
+    environment: production
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
